# auto_sige

./: .gitignore  6A.csv  6B.csv  README.md  pyproject.toml
auto_sige/: app.py  config.py  data.py  main.py  mapa.py  settings.py  utils.py
auto_sige/web/: app.py
