[tool.poetry]
name = "auto-sige"
version = "0.1.0"
description = ""
authors = ["Lucas Turuta <lcas.turuta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
selenium = "^4.26.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
